# python-apple-login

./: .gitignore  README.rst  apple_auth_service.py  apple_login_service.py  setup.cfg  setup.py  user_data.py
python_apple_login/: apple_auth.py  apple_auth_service.py  apple_login_service.py  authorization_response.py  client.py  client_secret.py  configuration.py  file_text_manager.py  key_description.py  rsa_key_service.py  user_data.py
python_apple_login.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
