[metadata]
name = python-apple-login
version = 0.1
description = Application for support of apple login
long_description = file: README.rst
url = TODo
author = Jan Kotras
author_email = jan.kotras@skoumal.net
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developerst

[options]
include_package_data = true
packages = find: