[metadata]
name = python-apple-login
version = 0.1
description = Application for support of apple login
long_description = file: README.rst
url = https://www.skoumal.com/
author = Jan Kotras, Libor Polehna
author_email = jan.kotras@skoumal.net, libor.polehna@skoumal.net
license = BSD License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developerst

[options]
include_package_data = true
packages = find: